# 777

./: CMakeLists.txt
.github/workflows/: build.yml
scr/: SmartVehHandler.cpp
src/: veh_patch_basic.cpp  veh_patch_smart.cpp
